k8s/base/dashboard-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-deployment
  namespace: monitoring-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: my-frontend:latest  # local image
          imagePullPolicy: Never      # πολύ σημαντικό για local image
          ports:
            - containerPort: 80
