k8s/base/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: monitoring-platform
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
