k8s/base/dashboard-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: monitoring-platform
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
